--- a/vacancy_app/templates/vacancy_app/vacancy-edit.html
+++ b/vacancy_app/templates/vacancy_app/vacancy-edit.html
@@ -6,8 +6,8 @@
         <aside class="pt-3 pb-4 px-4 mb-5 card">
           <h1 class="h4 pt-2 pb-2">Моя компания</h1>
           <div class="nav flex-column nav-pills">
-            <a class="nav-link" href="#">1. Информация о&nbsp;компании</a>
-            <a class="nav-link active" href="#">2. Вакансии</a>
+            <a class="nav-link" href="{% url 'my_company' %}">1. Информация о&nbsp;компании</a>
+            <a class="nav-link active" href="{% url 'my_vacancies' %}">2. Вакансии</a>
           </div>
         </aside>
       </div>
@@ -16,23 +16,24 @@
           <div class="card-body px-4 pb-4 tab-content">
             <!-- Tab -->
             <section>
-              <h2 class="h4 pt-2 pb-3">Backend Middle/Senior</h2>
+              <h2 class="h4 pt-2 pb-3">{{ vacancy.title }}</h2>
               <p class="alert alert-info" role="alert">Вакансия обновлена</p>
-              <form action="/echo">
+              <form method="post">
                 <div class="row">
                   <div class="col-12 col-md-6">
                     <div class="form-group pb-2">
                       <label class="mb-2 text-dark" for="vacancyTitle">Название вакансии</label>
-                      <input class="form-control" type="text" value="Staffing Smarter" id="vacancyTitle">
+                      <input class="form-control" type="text" value="{{ vacancy.title }}" id="vacancyTitle" name="title">
                     </div>
                   </div>
                   <div class="col-12 col-md-6">
                     <div class="form-group pb-2">
                       <label class="mb-2 text-dark" for="userSpecialization">Специализация</label>
-                      <select class="custom-select mr-sm-2" id="userSpecialization">
-                        <option selected>Backend разработка</option>
-                        <option value="1">Frontend разработка</option>
-                        <option value="2">Project manager</option>
+                      <select class="custom-select mr-sm-2" id="userSpecialization" name="specialty">
+                          {% for specialty in specialties %}
+
+                        <option value="{{ specialty.id }}" selected>{{ specialty.title }}</option>
+                          {% endfor %}
                       </select>
                     </div>
                   </div>
@@ -41,33 +42,23 @@
                   <div class="col-12 col-md-6">
                     <div class="form-group pb-2">
                       <label class="mb-2 text-dark" for="vacancySalaryMin">Зарплата от</label>
-                      <input class="form-control" type="text" value="90 000" id="vacancySalaryMin">
+                      <input class="form-control" type="text" value="{{ vacancy.salary_min }}" id="vacancySalaryMin" name="salary_min">
                     </div>
                   </div>
                   <div class="col-12 col-md-6">
                     <div class="form-group pb-2">
                       <label class="mb-2" for="vacancySalaryMax">Зарплата до</label>
-                      <input class="form-control" type="text" value="90 000" id="vacancySalaryMax">
+                      <input class="form-control" type="text" value="{{ vacancy.salary_max }}" id="vacancySalaryMax" name="salary_max">
                     </div>
                   </div>
                 </div>
                 <div class="form-group pb-2">
                   <label class="mb-2 text-dark" for="vacancySkills">Требуемые навыки</label>
-                  <textarea class="form-control" rows="3" id="vacancySkills" style="color:#000;">Бэкенд • Средний (Middle) • PHP • PostgreSQL • MySQL • Node.js • Laravel • Symfony • Yii framework • Sails.js • Rabbitmq • Kafka</textarea>
+                  <textarea class="form-control" rows="3" id="vacancySkills" style="color:#000;" name="skills">{{ vacancy.skills }}</textarea>
                 </div>
                 <div class="form-group pb-2">
                   <label class="mb-2 text-dark" for="vacancyDescription">Описание вакансии</label>
-                  <textarea class="form-control" rows="13" id="vacancyDescription" style="color:#000;">Финтех компания входит в международную группу  и занимается развитием факторингового бизнеса. В связи с расширением штата, мы хотим усилить нашу команду Backend-разработчиком, для работы над улучшением продуктов компании.
-
-Мы предлагаем:
-Оформление по ТК РФ
-ДМС со стоматологией
-Достойную зарплату, уровень которой можно обсудить по телефону с рекрутером
-Гибкое начало дня, отдельные дни удаленной работы обсуждаются
-Современный офис
-Демократичную корпоративную культуру
-Работу в команде по Scrum
-                  </textarea>
+                  <textarea class="form-control" rows="13" id="vacancyDescription" style="color:#000;">{{ vacancy.description }}</textarea>
                 </div>
                 <div class="form-group">
                   <input type="submit" class="btn btn-info" value="Сохранить">
