--- a/vacancy_app/templates/vacancy_app/company-edit.html
+++ b/vacancy_app/templates/vacancy_app/company-edit.html
@@ -20,7 +20,7 @@
               <p class="alert alert-info" role="alert">
                 Информация о компании обновлена
               </p>
-              <form method="post">
+              <form method="post" enctype="multipart/form-data">
                   {% csrf_token %}
                 <div class="row">
                   <div class="col-12 col-md-6">
