--- a/vacancy_app/templates/vacancy_app/vacancy-edit.html
+++ b/vacancy_app/templates/vacancy_app/vacancy-edit.html
@@ -19,6 +19,7 @@
               <h2 class="h4 pt-2 pb-3">{{ vacancy.title }}</h2>
               <p class="alert alert-info" role="alert">Вакансия обновлена</p>
               <form method="post">
+              {% csrf_token %}
                 <div class="row">
                   <div class="col-12 col-md-6">
                     <div class="form-group pb-2">
@@ -31,8 +32,9 @@
                       <label class="mb-2 text-dark" for="userSpecialization">Специализация</label>
                       <select class="custom-select mr-sm-2" id="userSpecialization" name="specialty">
                           {% for specialty in specialties %}
-
-                        <option value="{{ specialty.id }}" selected>{{ specialty.title }}</option>
+                              <option value="{{ specialty.id }}" {% if specialty.id == active_spec.id %}selected{% endif %}>
+                                  {{ specialty.title }}
+                              </option>
                           {% endfor %}
                       </select>
                     </div>
@@ -58,7 +60,7 @@
                 </div>
                 <div class="form-group pb-2">
                   <label class="mb-2 text-dark" for="vacancyDescription">Описание вакансии</label>
-                  <textarea class="form-control" rows="13" id="vacancyDescription" style="color:#000;">{{ vacancy.description }}</textarea>
+                  <textarea class="form-control" rows="13" id="vacancyDescription" name="description" style="color:#000;">{{ vacancy.description }}</textarea>
                 </div>
                 <div class="form-group">
                   <input type="submit" class="btn btn-info" value="Сохранить">
