add form create vacancy

--- a/vacancy_app/templates/vacancy_app/vacancy-list.html
+++ b/vacancy_app/templates/vacancy_app/vacancy-list.html
@@ -34,6 +34,9 @@
                 </div>
               </div>
                 {% endfor %}
+            <div class="text-center">
+            <a href="{% url 'create-vacancy' %}" class="btn btn-info mb-2 mt-3" btn-outline-info>Добавить вакансию</a>
+            </div>
               <!-- END vacancy state 1 -->
               <!-- vacancy state 2 -->
 
