change view.py, add get_object_or_404

--- a/vacancy_app/templates/vacancy_app/company-edit.html
+++ b/vacancy_app/templates/vacancy_app/company-edit.html
@@ -52,7 +52,7 @@
                   <div class="col-12 col-md-6">
                     <div class="form-group pb-2">
                       <label class="mb-2 text-dark" for="companyTeam">Количество человек в компании</label>
-                      <input class="form-control" type="text" name="employee_count" value="{{ my_company.employee_count }}" id="companyTeam" >
+                      <input class="form-control" type="number" name="employee_count" value="{{ my_company.employee_count }}" id="companyTeam" >
                     </div>
                   </div>
                   <div class="col-12 col-md-6">
