--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
             <a class="nav-link" href="{% url 'vacancies' %}">Вакансии</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'my_company' %}">Компании</a>
+            <a class="nav-link" href="">Компании</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'about' %}">О проекте</a>
