--- a/vacancy_app/templates/vacancy_app/resume-edit.html
+++ b/vacancy_app/templates/vacancy_app/resume-edit.html
@@ -36,7 +36,7 @@
             <div class="col-12 col-md-6">
               <div class="form-group pb-2">
                 <label class="mb-2 text-dark" for="userPortfolio">Ожидаемое вознаграждение</label>
-                <input class="form-control" type="text" value="{{ resume.salary }}" id="userPortfolio" name="salary">
+                <input class="form-control" type="number" value="{{ resume.salary }}" id="userPortfolio" name="salary">
               </div>
             </div>
           </div>
@@ -72,7 +72,7 @@
           </div>
           <div class="form-group pb-3">
             <label class="mb-2 text-dark" for="userPortfolio">Ссылка на портфолио</label>
-            <input class="form-control" type="text" placeholder="http://anylink.github.io" id="userPortfolio" name="portfolio" value="{{ resume.portfolio }}">
+            <input class="form-control" type="url" placeholder="http://anylink.github.io" id="userPortfolio" name="portfolio" value="{{ resume.portfolio }}">
           </div>
           <div class="form-group">
             <input type="submit" class="btn btn-info" value="Сохранить">
