--- a/vacancy_app/templates/vacancy_app/vacancy-edit.html
+++ b/vacancy_app/templates/vacancy_app/vacancy-edit.html
@@ -44,13 +44,13 @@
                   <div class="col-12 col-md-6">
                     <div class="form-group pb-2">
                       <label class="mb-2 text-dark" for="vacancySalaryMin">Зарплата от</label>
-                      <input class="form-control" type="text" value="{{ vacancy.salary_min }}" id="vacancySalaryMin" name="salary_min">
+                      <input class="form-control" type="number" value="{{ vacancy.salary_min }}" id="vacancySalaryMin" name="salary_min">
                     </div>
                   </div>
                   <div class="col-12 col-md-6">
                     <div class="form-group pb-2">
                       <label class="mb-2" for="vacancySalaryMax">Зарплата до</label>
-                      <input class="form-control" type="text" value="{{ vacancy.salary_max }}" id="vacancySalaryMax" name="salary_max">
+                      <input class="form-control" type="number" value="{{ vacancy.salary_max }}" id="vacancySalaryMax" name="salary_max">
                     </div>
                   </div>
                 </div>
@@ -68,24 +68,19 @@
               </form>
               <!-- END Vacancy info -->
               <!-- Applications -->
-              <h2 class="h4 pt-2 pb-3">Отклики - 2</h2>
+            {% if applications_count %}
+              <h2 class="h4 pt-2 pb-3">Отклики - {{ applications_count }}</h2>
+            {% endif %}
               <!-- Application 1 -->
+            {% for application in applications %}
               <div class="card mt-3">
                 <div class="card-body px-4">
-                  <p class="mb-1 font-weight-bold">Семёнов Зельфик Геннадиевич</p>
-                  <p class="mb-2"><a href="tel:+79002842324" class="text-dark">+7 (900) 284-23-24</a></p>
-                  <p class="mb-1">Я&nbsp;хотел&nbsp;бы работать в&nbsp;компании &laquo;АБВГД&raquo; программистом мобильных приложений. Мой опыт работы в&nbsp;программировании около 4&nbsp;лет (последние 1,5 года занимаюсь разработкой приложений.</p>
+                  <p class="mb-1 font-weight-bold">{{ application.written_username }}</p>
+                  <p class="mb-2"><a href="tel:+79002842324" class="text-dark">{{ application.written_phone }}</a></p>
+                  <p class="mb-1">{{ application.written_cover_letter }}</p>
                 </div>
               </div>
-              <!-- END Application 1 -->
-              <!-- Application 1 -->
-              <div class="card mt-3">
-                <div class="card-body px-4">
-                  <p class="mb-1 font-weight-bold">Сорокина Акра Павловна</p>
-                  <p class="mb-2"><a href="tel:+79002842324" class="text-dark">+7 (900) 284-23-24</a></p>
-                  <p class="mb-1">Добрый день! Увидела объявление о&nbsp;вашей вакансии. Заранее благодарю Вас за&nbsp;уделенное моей кандидатуре время. С&nbsp;уважением.</p>
-                </div>
-              </div>
+            {% endfor %}
               <!-- END Application 1 -->
               <!-- END Applications -->
             </section>
