--- a/vacancy_app/templates/vacancy_app/resume-edit.html
+++ b/vacancy_app/templates/vacancy_app/resume-edit.html
@@ -26,9 +26,10 @@
             <div class="col-12 col-md-6">
               <div class="form-group pb-2">
                 <label class="mb-2 text-dark" for="userReady">Готовность к работе</label>
-                <select class="custom-select mr-sm-2" id="userReady" name="status" value="{{ resume.status }}">
+{#                {{ form.status }}#}
+                  <select class="custom-select mr-sm-2" id="userReady" name="status" value="{{ resume.status }}">
                     {% for status in statuses %}
-                  <option value="{{ status.id }}">{{ status.status_job }}</option>
+                  <option value="{{ status.id }}"  {% if status.id  == resume.status.id %}selected{% endif %}>{{ status.status_job }}</option>
                     {% endfor %}
                 </select>
               </div>
@@ -46,7 +47,7 @@
                 <label class="mb-2 text-dark" for="userSpecialization">Специализация</label>
                 <select class="custom-select mr-sm-2" id="userSpecialization" name="specialty" value="{{ resume.specialty }}">
                     {% for specialty in specialties %}
-                  <option value="{{ specialty.id }}">{{ specialty.title }}</option>
+                  <option value="{{ specialty.id }}" {% if specialty.id  == resume.specialty.id %}selected{% endif %}>{{ specialty.title }}</option>
                     {% endfor %}
                 </select>
               </div>
