--- a/vacancy_app/templates/vacancy_app/resume-edit.html
+++ b/vacancy_app/templates/vacancy_app/resume-edit.html
@@ -11,12 +11,14 @@
           <div class="row">
             <div class="col-12 col-md-6">
               <div class="form-group pb-2">
+{#                  {{ form.name }}#}
                 <label class="mb-2 text-dark" for="userName">Имя</label>
                 <input class="form-control" type="text" value="{{ resume.name }}" id="userName" name="name">
               </div>
             </div>
             <div class="col-12 col-md-6">
               <div class="form-group pb-2">
+{#                  {{ form.surname }}#}
                 <label class="mb-2 text-dark" for="userSurname">Фамилия</label>
                 <input class="form-control" type="text" value="{{ resume.surname }}" id="userSurname" name="surname">
               </div>
@@ -36,6 +38,7 @@
             </div>
             <div class="col-12 col-md-6">
               <div class="form-group pb-2">
+{#                  {{ form.salary }}#}
                 <label class="mb-2 text-dark" for="userPortfolio">Ожидаемое вознаграждение</label>
                 <input class="form-control" type="number" value="{{ resume.salary }}" id="userPortfolio" name="salary">
               </div>
@@ -45,6 +48,7 @@
             <div class="col-12 col-md-6">
               <div class="form-group pb-2">
                 <label class="mb-2 text-dark" for="userSpecialization">Специализация</label>
+{#                  {{ form.specialty }}#}
                 <select class="custom-select mr-sm-2" id="userSpecialization" name="specialty" value="{{ resume.specialty }}">
                     {% for specialty in specialties %}
                   <option value="{{ specialty.id }}" {% if specialty.id  == resume.specialty.id %}selected{% endif %}>{{ specialty.title }}</option>
@@ -55,6 +59,7 @@
             <div class="col-12 col-md-6">
               <div class="form-group pb-2">
                 <label class="mb-2 text-dark" for="userQualification">Квалификация</label>
+{#                  {{ form.grade }}#}
                 <select class="custom-select mr-sm-2" id="userQualification" name="grade" value="{{ resume.grade }}">
                     {% for grade in grades %}
                   <option value="{{ grade.id }}" {% if grade.id == resume.grade.id %}selected{% endif %}>{{ grade.qualification }}</option>
@@ -65,14 +70,17 @@
           </div>
           <div class="form-group pb-2">
             <label class="mb-2 text-dark" for="userEducation">Образование</label>
+{#              {{ form.education }}#}
             <textarea class="form-control text-uppercase" rows="4" id="userEducation" style="color:#000;" name="education">{{ resume.education }}</textarea>
           </div>
           <div class="form-group pb-2">
             <label class="mb-2 text-dark" for="userExperience">Опыт работы</label>
+{#              {{ form.experience }}#}
             <textarea class="form-control" rows="4" id="userExperience" style="color:#000;" name="experience">{{ resume.experience }}</textarea>
           </div>
           <div class="form-group pb-3">
             <label class="mb-2 text-dark" for="userPortfolio">Ссылка на портфолио</label>
+{#              {{ form.portfolio}}#}
             <input class="form-control" type="url" placeholder="http://anylink.github.io" id="userPortfolio" name="portfolio" value="{{ resume.portfolio }}">
           </div>
           <div class="form-group">
